# firekyt

./: .env.security.example  .gitignore  .replit  ARCHITECTURE.md  DEPENDENCIES.md  ERROR_HANDLING_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION-GUIDE.md  INTELLIGENT_LINK_TESTING_GUIDE.md  MODULAR_ARCHITECTURE.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PERFORMANCE_TESTING_SUMMARY.md  README.md  RYE_API_LIMITATIONS.md  RYE_INTEGRATION_GUIDE.md  SCALABILITY_ARCHITECTURE.md  SECURITY_IMPLEMENTATION.md  SETUP_GITHUB.md  TESTING_GUIDE.md  blog-api-server.js  blog-integration-guide.md  blog-server-with-api.js  complete-embed-script.js  create_sample_content.html  example-usage.html  external-widget-test.html  firekyt-widget-embed.php  firekyt-widget-plugin.php  fix-content.js  import-rye-products.js  k8s-deployment.yaml  package-complete.json  package-lock.json  package.json  pyproject.toml  python-requirements.txt  real-blog-server.cjs  replit.md  sample-blog-server.cjs  sample_autolink_rules.md  (+16 more)
assets/: admin.css  frontend.css  gutenberg-support.js
attached_assets/: Pasted-Let-s-add-the-Niche-Competitor-Insights-feature-ensuring-the-AI-provides-actionable-recommendat-1750100271888_1750100271889.txt  UI_TEMPLATE_GUIDE_1749860850944.md  _.firekyt.com_private_key_1751927711203.key  product-seed-data_1753048982617.csv
client/: index.html
docs/: API_DOCUMENTATION.md  DOCUMENTATION_SUMMARY.md  FAQ.md  LEARNING_PATH.md  LINKEDIN_OAUTH_SETUP.md  LINK_TRACKING_IMPLEMENTATION.md  PERFORMANCE_MODULES.md  PINTEREST_API_APPROVAL.md  PINTEREST_API_SETUP.md  (+3 more)
server/: db.ts  (+35 more)
(+153 files in other folders)
