[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.12",
    "anthropic>=0.54.0",
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "openai>=1.86.0",
    "python-amazon-paapi>=5.0.1",
    "requests>=2.32.4",
    "selenium>=4.33.0",
    "serpapi>=0.1.5",
    "trafilatura>=2.0.0",
]
